Fixed temporary code bracket alignment issue

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -110,11 +110,13 @@ header img.pic {
   font-family: "Courier New", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 88pt;
   float: left;
+  margin: 30px 0px 0px 50px;
 }
 .bracket-right {
   font-family: "Courier New", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 88pt;
   float: right;
+  margin: 30px 50px 0px 0px;
 }
 
 header .intro-text .name {
